<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.libre_universish.equalizer.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextAppearance="@style/Toolbar.TitleText">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:isScrollContainer="true">


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="16dp"
                        android:src="@mipmap/ic_launcher"
                        tools:ignore="ContentDescription"
                        android:tint="@android:color/transparent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/an_open_source_light_weight_equalizer_for_all_devices"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rate_on_google_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:minHeight="48dp"
                    >

                    <ImageView
                        android:id="@+id/icon_rate"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_star_white_24dp"
                        tools:ignore="ContentDescription,UnusedAttribute"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate"
                            android:paddingTop="8dp"

                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:paddingBottom="8dp"
                            android:text="@string/leave_a_positive_rating_on_google_play"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/donate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:minHeight="48dp"
                    >

                    <ImageView
                        android:id="@+id/icon_donate"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_card_giftcard_white_24dp"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/donate"
                            android:paddingTop="8dp"

                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/any_donation_will_remove_the_ads"
                            android:paddingBottom="8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fork_on_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:minHeight="48dp"
                    >

                    <ImageView
                        android:id="@+id/icon_github"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_github_circle_white_24dp"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:text="@string/fork_on_github"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/report_bugs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:minHeight="48dp"
                    >

                    <ImageView
                        android:id="@+id/icon_email"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_email_white_24dp"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/report_bugs"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/licenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:minHeight="48dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    >

                    <ImageView
                        android:id="@+id/icon_licenses"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_description_white_24dp"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/licenses"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:minHeight="48dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    >

                    <ImageView
                        android:id="@+id/icon_privacy_policy"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_description_white_24dp"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="32dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/privacy_policy"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>


</LinearLayout>
