<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        >

    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardEq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_below="@id/toolbar"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Switch
                android:id="@+id/switchEnable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/enable_equalizer" />


            <LinearLayout
                android:id="@+id/linearLayoutEqual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="16dp"
                android:layout_below="@id/switchEnable">

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/centerFreq0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="12sp" />

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/mySeekBar0"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:rotation="270"
                        android:progress="1"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/centerFreq1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="12sp" />

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/mySeekBar1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:rotation="270"
                        android:progress="1"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/centerFreq2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="12sp" />

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/mySeekBar2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:rotation="270"
                        android:progress="1"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/centerFreq3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="12sp" />

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/mySeekBar3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:rotation="270"
                        android:progress="1"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/centerFreq4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="12sp" />

                    <android.support.v7.widget.AppCompatSeekBar
                        android:id="@+id/mySeekBar4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:rotation="270"
                        android:progress="1"/>


                </LinearLayout>

            </LinearLayout>



                <TextView
                    android:id="@+id/presetTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:text="@string/presets"
                    android:layout_below="@id/linearLayoutEqual"
                    android:paddingBottom="16dp"
                    android:textAlignment="center"
                    android:layout_marginStart="48dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayoutEqual"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="48dp"
                    android:paddingBottom="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="48dp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardEq"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">


            <com.libre_universish.equalizer.ArcSeekBar.ArcSeekBar
                android:id="@+id/bassSeekBar"
                android:layout_width="100dp"
                android:layout_height="60dp"
                />

            <FrameLayout
                android:id="@+id/bassSwitchFrame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bassSeekBar"
                android:layout_alignStart="@id/bassSeekBar"
                android:layout_alignLeft="@id/bassSeekBar"
                android:layout_alignEnd="@id/bassSeekBar"
                android:layout_alignRight="@id/bassSeekBar">

                <Switch
                    android:id="@+id/bassSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bassSwitchFrame"
                android:layout_alignStart="@id/bassSeekBar"
                android:layout_alignLeft="@id/bassSeekBar"
                android:layout_alignEnd="@id/bassSeekBar"
                android:layout_alignRight="@id/bassSeekBar"
                android:gravity="center"
                android:text="@string/bass_boost" />


            <com.libre_universish.equalizer.ArcSeekBar.ArcSeekBar
                android:id="@+id/volSeekBar"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                />

            <Switch
                android:id="@+id/volSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/volSeekBar"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/volTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/volSwitch"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/loudness" />


            <com.libre_universish.equalizer.ArcSeekBar.ArcSeekBar
                android:id="@+id/virtualSeekBar"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/virtualSeekBar"
                android:layout_alignStart="@id/virtualSeekBar"
                android:layout_alignLeft="@id/virtualSeekBar"
                android:layout_alignEnd="@id/virtualSeekBar"
                android:layout_alignRight="@id/virtualSeekBar">

                <Switch
                    android:id="@+id/virtualSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bassSwitchFrame"
                android:layout_alignStart="@id/virtualSeekBar"
                android:layout_alignLeft="@id/virtualSeekBar"
                android:layout_alignEnd="@id/virtualSeekBar"
                android:layout_alignRight="@id/virtualSeekBar"
                android:gravity="center"
                android:text="@string/virtualizer" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>



